--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: whitesmoke;
+  color: black;
   margin: 0;
   padding: 0;
 }
@@ -12,6 +13,8 @@ h4,
 h5,
 h6 {
   font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
+  font-size: 2rem;
+  color: darkgreen;
 }
 
 .container {
@@ -30,11 +33,13 @@ img {
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
+  background-color: yellowgreen;
 }
 
 .main-nav ul li {
   flex: 1;
   text-align: center;
+
 }
 
 .main-nav ul li a {
@@ -42,6 +47,7 @@ img {
   color: inherit;
   text-decoration: none;
   font-size: 1.25rem;
+  padding: 1rem;
 }
 
 form input,
@@ -50,6 +56,7 @@ form textarea {
   width: 100%;
   margin-bottom: 1rem;
   padding: .5rem 1rem;
+  border: 1px solid black;
 }
 
 form textarea {
@@ -64,8 +71,10 @@ form button {
   border: 2px solid black;
   padding: 1rem;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .site-footer {
   padding: 2rem 0;
+  text-align: center;
 }
